--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 <body>
     <h1>¡Hola, Git y GitHub!</h1>
     <img src="imagen1.jpg" alt="Imagen 1" width="300">
+    <img src="imagen2.jpg" alt="Imagen 2" width="300">
 </body>
 </html>
