--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
     <h1>¡Hola, Git y GitHub!</h1>
     <img src="imagen1.jpg" alt="Imagen 1" width="300">
     <img src="imagen2.jpg" alt="Imagen 2" width="300">
+    <p>Estoy haciendo el mini taller es un proyecto usando Git y GitHub.</p>
 </body>
 </html>
